--- a/config/database.yml
+++ b/config/database.yml
@@ -25,8 +25,7 @@ development:
   <<: *default
   database: tienda_development
   username: postgres
-  password: 3590
-  port: 5432
+  password: 8685
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
@@ -61,8 +60,8 @@ test:
   <<: *default
   database: tienda_test
   username: postgres
-  password: 3590
-  port: 5432
+  password: 8685
+
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
@@ -86,5 +85,4 @@ production:
   <<: *default
   database: tienda_production
   username: tienda
-  password: 
-
+  password: <%= ENV['TIENDA_DATABASE_PASSWORD'] %>
